--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pprsdb",
   "version": "1.0.0",
   "description": "",
-  "main": "pprs-db.js",
+  "main": "MassageData.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
